Widened tooltip. Fixed z-index of key/tooltop in base.css

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -198,9 +198,9 @@ div.candidate:last-child {border-bottom: 0px none;}
 
 #map-tooltip-target {
   position: absolute;
-  z-index: 1;
+  z-index: 500;
   background-color: #fff;
-  width: 360px;
+  width: 375px;
   border: 1px solid #ccc;
   padding: 5px;
   pointer-events: none;
@@ -215,7 +215,7 @@ div.candidate:last-child {border-bottom: 0px none;}
 
 #map-key {
   position: absolute;
-  z-index: 500;
+  z-index: 200;
   bottom: 15px;
   right: 15px;
   background-color: #fff;
